--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
 .App {
-  text-align: center;
+  border-radius: 5px;
+  margin: 0 auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  z-index: 5;
+  background: #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+header .container {
+  width: 78%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.menu {
+  width: 40px;
+  height: 25px;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+  cursor: pointer;
+}
+.menu span:nth-child(1) {
+  width: 40%;
+  height: 2px;
+  background: #000;
+}
+.menu span:nth-child(2) {
+  width: 90%;
+  height: 2px;
+  background: #000;
+}
+.menu span:nth-child(3) {
+  width: 60%;
+  height: 2px;
+  background: #000;
+}
+.search-box input {
+  width: 300px;
+  outline: none;
+  border: none;
+  padding: 10px;
+}
+.center-menu {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.create-link {
+  text-decoration: none;
+  color: white;
+  padding: 5px 15px;
+  background-color: rgb(47, 47, 241);
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.create-link span {
+  font-size: 20px;
+  margin: 5px;
+}
+.right-menu {
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.right-menu .img img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  margin-right: 10px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+.right-menu .user-menu {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.right-menu .user-menu .bottom-u-m {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.side-bar {
+  position: fixed;
+  top: 0;
+  width: 18rem;
+  height: 100vh;
+  background: linear-gradient(
+    to top,
+    rgba(156, 59, 247, 0.87) 20%,
+    rgba(33, 122, 240, 0.911)
+  );
+  z-index: 10;
+}
+.navigation {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 10px;
+}
+.navigation .nav-link {
+  text-decoration: none;
+  outline: none;
+  padding: 16px;
   color: white;
+  margin-top: 20px;
+  border-radius: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.navigation .nav-link:hover {
+  background-color: rgba(251, 252, 253, 0.178);
+  transition: 0.3s ease;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-title {
+  font-size: 23px;
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding: 10px;
+  margin: 5px;
 }
