--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:ital,wght@0,200;1,200;1,300&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap");
+
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: "Roboto" sans-serif;
 }
