--- a/src/pages/Components/Component.css
+++ b/src/pages/Components/Component.css
@@ -1,12 +1,13 @@
 main {
   width: 100%;
-  border: 1px solid #000;
   margin: 0 auto;
+  /* border: 1px solid #000; */
 }
+
 .container {
   width: 99%;
   margin: 0 auto;
-  border: 1px solid #000;
+  padding: 5px;
 }
 main .container {
   display: flex;
@@ -15,5 +16,298 @@ main .container {
 }
 main .container .block {
   width: 80%;
+}
+
+.side-bar {
+  width: 20%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+}
+.side-bar .container .navigation {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.side-bar .container .navigation .side-bar-link {
+  padding: 10px;
+  margin-top: 5px;
+  text-decoration: none;
+  color: #000;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  transition: 0.2s ease;
+  font-family: "Roboto", sans-serif;
+}
+.side-bar .container .navigation .side-bar-link:hover {
+  background-color: rgb(167, 167, 167);
+  color: white;
+}
+.side-bar .container .navigation .side-bar-link:focus {
+  background-color: rgb(150, 150, 150);
+  color: white;
+}
+.side-bar .container .navigation .side-bar-link:active {
+  background-color: rgb(173, 173, 173);
+  color: white;
+}
+.side-bar .container .navigation .side-bar-link i {
+  margin-right: 15px;
+  padding: 5px;
+}
+.home-page .container .block {
+  width: 100%;
+}
+
+header {
+  width: 100%;
+}
+header .container {
+  justify-content: space-between;
+  align-items: center;
+}
+.search-box {
+  border: 2px solid rgb(173, 173, 173);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-box input {
+  width: 350px;
+  padding: 5px;
+  outline: none;
+  color: rgb(80, 80, 80);
+  border: none;
+}
+.search-box button i {
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  outline: none;
+  align-items: center;
+  color: rgb(80, 80, 80);
+}
+.search-box button {
+  outline: none;
+  color: rgb(80, 80, 80);
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.about-platform .title {
+  color: rgb(163, 163, 163);
+  background-color: rgb(226, 226, 226);
+  margin-bottom: 30px;
+}
+.about-description .description {
+  width: 500px;
+  height: 150px;
+  text-anchor: middle;
+  font-size: 20px;
+  color: rgba(105, 105, 105, 0.918);
+  border-bottom: 1px solid rgb(156, 156, 156);
+  margin-bottom: 30px;
+}
+
+.box {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.box .box-list {
+  width: 150px;
+  height: 50px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0px 0px 0px 3px gray;
+  background-color: rgb(78, 78, 78);
+  color: #ccc;
+  font-size: 15px;
+  margin: 10px;
+  text-align: center;
+}
+
+.courses-about {
+  width: 80%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.courses-about ul {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+  gap: 20px;
+  margin-top: 30px;
+}
+.courses-about ul li {
+  padding: 5px;
+  width: 150px;
+  list-style-type: none;
+  margin: 5px;
+  text-align: center;
+  background-color: rgb(199, 198, 198);
+  color: rgb(71, 71, 71);
+  padding: 5px;
+  border-radius: 3px;
+  font-size: 16px;
+  user-select: none;
+  cursor: text;
+}
+.courses-about ul li:hover {
+  background-color: rgb(175, 175, 175);
+}
+
+.language-about {
+  width: 100%;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  margin-top: 30px;
+}
+
+.language-about .lang span {
+  width: 250px;
+  font-size: 30px;
+}
+.language-about .lang {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid rgb(163, 163, 163);
+  margin: 5px;
+}
+.language-about .lang ul li {
+  list-style: none;
+  font-style: 23px;
+  padding: 5px;
+  margin: 5px;
+  border-bottom: 1px solid #000;
+}
+.lessons-about-description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid blue;
+  text-align: center;
+}
+.s-log-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px;
+  margin: 5px;
+  position: relative;
+}
+.list b {
+  margin-right: 5px;
+  margin-left: 50%;
+}
+.flex-min-group {
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid #000;
+}
+
+.flex-min-group:nth-child(1) .s-log-icon:nth-child(1):hover::after {
+  content: "ko'rilgan";
+  position: absolute;
+  right: -15%;
+  top: -15px;
+  background-color: #222;
+  color: #fff;
+  font-size: 13px;
+  padding: 1px;
+}
+.flex-min-group:nth-child(1) .s-log-icon:nth-child(2):hover::after {
+  content: "chiqishlar";
+  position: absolute;
+  right: -15%;
+  top: -15px;
+  background-color: #222;
+  color: #fff;
+  font-size: 13px;
+  padding: 1px;
+}
+.flex-min-group:nth-child(1) .s-log-icon:nth-child(3):hover::after {
+  content: "kiriliganlar";
+  position: absolute;
+  right: -15%;
+  top: -15px;
+  background-color: #222;
+  color: #fff;
+  font-size: 13px;
+  padding: 1px;
+}
+.flex-min-group:nth-child(1) .s-log-icon:nth-child(4):hover::after {
+  content: "o'quvchilar";
+  position: absolute;
+  right: -15%;
+  top: -15px;
+  background-color: #222;
+  color: #fff;
+  font-size: 13px;
+  padding: 1px;
+}
+
+.video-card-block {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  gap: 20px;
+  padding: 5px;
+  background-color: rgb(235, 235, 235);
+}
+.video-card-block .videos {
+  width: 280px;
+  height: 350px;
+  box-shadow: 1px 1px 3px 5px gray;
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 3px;
+  background-color: #fff;
+}
+
+.video-card-block .videos .video {
+  width: 100%;
+  height: 200px;
+  cursor: pointer;
+}
+
+.video-card-block .videos .video video {
+  width: 100%;
+  height: 100%;
   border: 1px solid #000;
+  border-radius: 5px;
+}
+.video-card-block .videos .video img {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+.video-card-block .videos .description {
+  font-size: 16px;
+  color: rgba(105, 105, 105, 0.918);
+  border-bottom: 1px solid rgb(156, 156, 156);
+  border-top: 1px solid rgb(156, 156, 156);
+  text-align: justify;
 }
